[refactoring/findrefs] Introduced reference filters